# petri

./: .gitattributes  .gitignore  01-contract-structure.md  03-frontend-design-spec.md  DECISIONS.md  DEPLOY.md  README.md  petri-velfi-style_2.html
contracts/: README.md
contracts/petri-market/: Cargo.toml
contracts/petri-market/src/: contract.rs  error.rs  gov.rs  lib.rs  msg.rs  state.rs
docs/: PRD.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/public/wallets/: README.md
frontend/src/: App.tsx  Dashboard.tsx  keplr-window.d.ts
frontend/src/chain/: config.ts  contract.ts  denom.ts  gov.ts  keplr.ts  vote.ts
frontend/src/components/: BetForm.tsx  ClaimPanel.tsx  Dish.tsx  OddsBar.tsx  VotePrompt.tsx  VoteStatusPill.tsx  WalletConnect.tsx  WalletIcon.tsx  WalletPicker.tsx
frontend/src/landing/: Landing.tsx  landing.css
frontend/src/pages/: DocPage.tsx  pages.css
frontend/src/state/: store.ts
frontend/src/styles/: global.css
frontend/src/types/: index.ts
scripts/: .env.example  deploy.sh  optimize.sh
