[package]
name = "petri-market"
version = "0.1.0"
authors = ["Petri Lab"]
edition = "2021"
description = "Parimutuel, vote-gated prediction market for Cosmos Hub governance proposals"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "2.1"
cosmwasm-std = { version = "2.1", features = ["stargate", "cosmwasm_2_0"] }
cw-storage-plus = "2.0"
cw2 = "2.0"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"
# Protobuf decoding for the x/gov Vote query response (vote existence check)
prost = "0.12"

[dev-dependencies]
cw-multi-test = "2.1"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = true
